@@ -1,5 +1,8 @@
 2017-03-18  Jim Fowler  <jrf@biblion>
 
+	* Tools/bookentry/symbol.py: Added sigClicked() call to testing
+	section.
+
 	* Tools/bookentry/bookfile.py (BookFile.writeFile_XML): Fixed bug
 	in opening filename.  The code was ignoring the input value.
 
